fix(portal): restore detail state and task actions
Forward cookie-based access tokens to workflow-engine so portal detail views can resolve live task state, and resolve task actions strictly from the current node's actionIds to avoid showing every workflow action on one task.

Co-authored-by: Cursor <cursoragent@cursor.com>